@@ -133,6 +133,7 @@ void LuaContext::register_map_module() {
       { "get_camera_position", map_api_get_camera_position },
       { "move_camera", map_api_move_camera },
       { "get_ground", map_api_get_ground },
+      { "draw_visual", map_api_draw_visual },
       { "draw_sprite", map_api_draw_sprite },
       { "get_crystal_state", map_api_get_crystal_state },
       { "set_crystal_state", map_api_set_crystal_state },
@@ -1739,6 +1740,26 @@ int LuaContext::map_api_get_ground(lua_State* l) {
 }
 
 /**
+ * \brief Implementation of map:draw_visual().
+ * \param l The Lua context that is calling this function.
+ * \return Number of values to return to Lua.
+ */
+int LuaContext::map_api_draw_visual(lua_State* l) {
+
+  return LuaTools::exception_boundary_handle(l, [&] {
+
+    Map& map = *check_map(l, 1);
+    Drawable& drawable = *check_drawable(l, 2);
+    int x = LuaTools::check_int(l, 3);
+    int y = LuaTools::check_int(l, 4);
+
+    map.draw_visual(drawable, x, y);
+
+    return 0;
+  });
+}
+
+/**
  * \brief Implementation of map:draw_sprite().
  * \param l The Lua context that is calling this function.
  * \return Number of values to return to Lua.
@@ -1746,12 +1767,16 @@ int LuaContext::map_api_get_ground(lua_State* l) {
 int LuaContext::map_api_draw_sprite(lua_State* l) {
 
   return LuaTools::exception_boundary_handle(l, [&] {
+
+    get_lua_context(l).warning_deprecated("map:draw_sprite()",
+        "Use map:draw_visual() instead.");
+
     Map& map = *check_map(l, 1);
     Sprite& sprite = *check_sprite(l, 2);
     int x = LuaTools::check_int(l, 3);
     int y = LuaTools::check_int(l, 4);
 
-    map.draw_sprite(sprite, x, y);
+    map.draw_visual(sprite, x, y);
 
     return 0;
   });
